Sat Jul 18 16:32:51 BST 1998 Adam D. Moss <adam@gimp.org>

	* app/fileops.c: Fixed my idiotic comment syntax
	* app/airbrush.c: Less wussy default/max rate

Sat Jul 18 16:08:23 BST 1998 Adam D. Moss <adam@gimp.org>

	* app/fileops.c: Added the ability to make multiple
	selections from GIMP's load-file-selector.  It's
	adequate but not perfect without the ability to get
	the filesel's idea of its cwd via clean GTK coding.

	* app/convert.c: Minor textual changes.

Fri Jul 17 01:28:30 PDT 1998 Manish Singh <yosh@gimp.org>

	* gimptool.in: Made usage printout more verbose, added
	--quiet and -n options

	* gimp.m4: set NOUI stuff if available

Thu Jul 16 16:20:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* gimptool.in: Added --cflags-noui and --libs-noui flags and
	appropriate sed junk to craft it. Don't call gtk-config unless
	GTK_CONFIG is set; hard code the info. Strip out redundant
	stuff from the output

	* libgimp/gimp.h
	* libgimp/gimpimage.c: make gimp_image_flatten return a value
	to be consistent with the PDB

Thu Jul 16 13:13:23 PDT 1998 Manish Singh <yosh@gimp.org>

	* updated MapObject again

Thu Jul 16 04:38:19 PDT 1998 Jay Cox  <jaycox@earthlink.net>

	* brush_edit.[ch]: added a zoom indicator on the preview

        * gimpbrushgenerated.[ch] gimpbrushlist.c: added support
	for loading generated brushes.

	* data/brushes/round01.vbr: a sample generated brush

Wed Jul 15 22:06:32 CDT 1998 Shawn T. Amundson <amundson@gimp.org>

	* Cursor location in statusbar
	* Fixed resize of window
	* progressbar is smaller now

Thu Jul 16 02:43:51 MEST 1998 Sven Neumann <sven@gimp.org>

	updated MapObject plug-in

Wed Jul 15 04:55:30 PDT 1998 Jay Cox <jaycox@earthlink.net>

	* app/gimpbrushgenerated.c
	* app/gimpbrushgenerated.h
	Added freeze/thaw methods
	
	* app/brush_edit.c
	display a preview in the brush_edit window

Tue Jul 14 19:22:46 PDT 1998 Manish Singh <yosh@gimp.org>

	* acconfig.h
	* configure.in
	* app/about_dialog.c
	* app/app_procs.c
	* app/main.c